style/index.css
/**********
Success Color Palette
Color - Hex - RGB
Blue - #003663 - (0,54,99)
Grey - #dddddd - (221,221,221)
White - #ffffff	- (255,255,255)
OrangeRed - #CF4C3A - (255,102,51)
Green - #6cc070 - (108,192,112)

fonts
font-family: 'Montserrat', sans-serif;
font-family: 'Quicksand', sans-serif;
**********/

/*****
Reset
******/

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default padding */
ul,
ol[class] {
  padding: 0;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
ul,
ol[class],
li,
figure,
figcaption,
blockquote,
dl,
dd {
  margin: 0;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  scroll-behavior: smooth;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img {
  max-width: 100%;
  display: block;
}

/* Natural flow and rhythm in articles by default */
article > * + * {
  margin-top: 1em;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations and transitions for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  * {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* Custom CSS Beyond this point */
html {
    font-size: 62.5%;
    position: relative;
    scroll-behavior: smooth;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Quicksand', sans-serif;
}

p, a {
    font-family: 'Montserrat', sans-serif;
}

/* Nav */

nav {
    width: 0vw;
    height: 100vh;
    
    background-color: #5c5c5c;
    color: #ffffff;
    display: flex;
    flex-flow: column nowrap;
    position: absolute;
    right: 0;
    left: 100%;
    box-shadow: 0 0 10px #acacac34;
    z-index: 2;
    transition: .4s ease-out;
}

.show {
    width: 10vw;
    left: 90%;
}

.navLinksCont {
    display: flex;
    font-size: 2rem;
    flex-flow: column nowrap;
    list-style: none;
    align-items: stretch;
}

nav a {
    overflow: hidden;
    text-decoration: none;
    color: #ffffff;
    width: 100%;
    background-color: #CF4C3A;
    padding: 0 5%;
}

nav a:hover {
    color: #ffffff;
    padding: 1% 2%;
    background-color: #b84334;
    border: .05em solid #9e392c;
}
   
/* Header */

header {
    width: 100vw;
    height: 100vh;
    z-index: 1;
    box-shadow: 0 0 10px #2b2b2b;
}

header video {
    object-fit: cover;
    height: 100vh;
    width: 100vw;
    position: absolute;
    top: 0;
    left: 0;
    filter: saturate(30%);
}

header .viewport-header {
    position: relative;
    text-align: left;
    padding-top: 5vw;
    display: flex;
    flex-flow: column wrap;
    justify-content: space-between;
    height: 100vh;
    background-color: rgba(0, 0, 0, .8);
    color: #ffffff;
}

.top-bar {
    display: flex;
    flex-flow: row nowrap;
    width: 100vw;
    height: 10vw;
    align-items: center;
    justify-content: space-between;
    padding: 0 5%;
    
}

.top-bar #logo {
    width: 10%;
    border-radius: 50%;
}

.burger {
    margin-left: 25%;
    margin-right: 0;
    display: inline-block;
    cursor: pointer;
    z-index: 3;
    transition: .5s;
}

.change .burger {
    margin-right: 10%;
}

.burgerLine {
    width: 35px;
    height: 5px;
    background-color:#ffffffb2;
    margin: 6px 0 0 0;
    transition: 0.4s;
}

.change .blOne {
    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
    transform: rotate(-45deg) translate(-9px, 6px) ;
}

.change .blTwo {
    opacity: 0;
}

.change .blThree {
    -webkit-transform: rotate(45deg) translate(-8px, -8px);
    transform: rotate(45deg) translate(-8px, -8px);
}

.viewport-header .text-container {
    margin-left: 10%;
    margin-right: auto;
}

.viewport-header h1 {
    font-size: 8rem;
    font-family: monospace;
    max-width: fit-content;
    overflow: hidden; 
    border-right: .05em solid white;
    white-space: nowrap;
    letter-spacing: .2em;
    animation: 
        typing 2s steps(13,end),
        blinking-caret .75s step-end infinite;
}

@keyframes typing {
    from { width: 0 }
    to { width: 676px }
}

@keyframes blinking-caret {
    from, to { border-color: transparent }
    50% { border-color: white }
}


.viewport-header p {
    font-size: 2.5rem;
}

.viewport-header a {
    position: relative;
    font-size: 2.5rem;
    margin: 2% auto;
    text-decoration: none;
    color: white;
    width: fit-content;
    text-align: center;
    align-self: flex-end;
}

.viewport-header a::after {
    border-top: 1px solid white;
    content: "";
    position: absolute;
    left: 50%;
    right: 50%;
    top: 1.5em;
    transition: .2s ease-out;
}

.viewport-header a:hover::after {
    left: 0%;
    right: 0%;
}


/* Section */

section {
    width: 100vw;
    text-align: center;
    padding-top: 3%;
}

.sec-head-txt {
    font-size: 2rem;
}

#section-wrapper {
    width: 95%;
    height: 95%;
    margin: 3% auto;
    flex-flow: row wrap;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    border-radius: 20px;
}

.project-icon {
    margin: 1%;
    width: 25%;
    background-color: #dddddd;
    color: #000;
    border: .1em solid black;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.project-img {
    width: 92%;
    min-width: 200px;
    min-height: 125px;
    margin: 3% auto;
    display: flex;
}

.project-img img {
    border-radius: 10px;
    box-shadow: 0 0 5px #2b2b2b;
    border: .1em solid black;
}

.project-sum {
    width: 93%;
    margin-top: 2%;
    font-size: 1.5rem;
}

.project-sum a {
    color: #000;
    text-decoration: none;
}

.project-sum a:hover {
    text-decoration: underline;
}

.project-sum h3{
    text-align: center;
    margin-bottom: 5%;
}

/* footer */

footer {
    width: 100vw;
    height: 10vh;
    text-align: center;
    background-color: #dddddd;
    box-shadow: 0 0 10px #2b2b2b;
    display: flex;
    padding: 0 1%;
    flex-flow: row nowrap;
    justify-content: space-around;
    align-items: center;
}
.copy {
    flex: 1;
}

footer .social {
    display: flex;
    flex-flow: row;
    align-items: center;
    flex: 1;
    justify-content: space-evenly;
}

.fa {
    height: 50px;
    width: 50px;
    font-size: 30px;
    text-decoration: none;
    margin: 5px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .fa:hover {
      opacity: 0.9;
  }
  
  .fa-facebook {
    background: #3B5998;
    color: white;
  }
  
  .fa-twitter {
    background: #55ACEE;
    color: white;
  }
  
  .fa-linkedin {
    background: #007bb5;
    color: white;
  }
  
  .fa-instagram {
    background: #125688;
    color: white;
  }
  

.footer-nav {
    flex: 1;
}

footer a {
    color: #000000;
}

/* Media Querys */

@media only screen and (max-width: 890px) {
    html, body {
        font-size: 50%;
    }

    nav {
        width: 0vw;
        height: 100vh;
        
        background-color: #5c5c5c;
        color: #ffffff;
        display: flex;
        flex-flow: column nowrap;
        position: absolute;
        right: 0;
        left: 100%;
        box-shadow: 0 0 10px #acacac34;
        z-index: 2;
        transition: .4s ease-out;
    }
    
    .show {
        width: 20vw;
        left: 80%;
    }

    .viewport-header .text-container {
        margin: 0 5%;
    }
    
    .top-bar {
        display: flex;
        flex-flow: row nowrap;
        width: 100vw;
        height: 20vw;
        align-items: center;
        justify-content: space-between;
        padding: 0 10%;
        
    }
    
    .top-bar #logo {
        width: 20%;
        border-radius: 50%;
    }
    
    .burger {
        margin-left: 25%;
        margin-right: 0;
        display: inline-block;
        cursor: pointer;
        z-index: 3;
        transition: .5s;
    }
    
    .change .burger {
        margin-right: 20%;
    }

    .viewport-header h1 {
        overflow: visible; 
        border-right: none;
        white-space: normal;
        letter-spacing: .1em;
        animation: none;
    }

    .viewport-header p {
        display: flex;
        flex-flow: column;
    } 

    .dash {
        display: none;
    }

    .viewport-header a {
        position: relative;
        font-size: 2.5rem;
        margin: 2% auto;
        text-decoration: none;
        color: white;
        width: 80%;
        text-align: center;
        align-self: flex-end;
    }

    #section-wrapper {
        flex-flow: column wrap;
    }

    
    .project-icon {
        margin: 1%;
        width: 80%;
        background-color: #dddddd;
        color: #000;
        border: .1em solid black;
        border-radius: 10px;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: center;
    }

    .project-img {
        width: 92%;
        min-width: auto;
        min-height: 125px;
        margin: 3% auto;
        display: flex;
    }

    footer {
        width: 100vw;
        min-height: 20vh;
        text-align: center;
        background-color: #dddddd;
        box-shadow: 0 0 10px #2b2b2b;
        display: flex;
        padding: 0 1%;
        flex-flow: column nowrap;
        justify-content: space-evenly;
        align-items: center;
    }
    .copy {
        flex: none;
    }
    
    footer .social {
        display: flex;
        flex-flow: row;
        align-items: center;
        flex: none;
        justify-content: space-evenly;
    }
    
    .footer-nav {
        flex: none;
    }
}

@media only screen and ( max-width: 270px ) {
    .viewport-header h1, h2, h3, .viewport-header p, p {
        margin: 0 auto;
        font-size: 1rem;
        text-align: center;
    }
    
    .viewport-header p {
        text-align: center;
        font-size: 1.3rem;
        display: flex;
        flex-flow: column;
    } 

    .dash {
        display: none;
    }
    
    .viewport-header a {
        font-size: 1rem;
    }
    footer {
        min-height: 60vh;
    }
    footer .social {
        flex-flow: column;
    }
}

